# stellarstellaris-win

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  hooking_weird.h  hooking_windows.cpp  hooking_windows.h  stellar-injected.cpp  stellar-win.cpp  stellar-win.h  stellaris-CApplication.h  stellaris-CGameIdler.h
.github/workflows/: cmake.yml
cmake/: CheckGit.cmake  git_version.cpp.in
docs/: example-stellarstellaris-debug.log.txt  stellaris-command-line-args.md
docs/bug_notes/: hull-shield-armor_regen_overflow.md  stellar-outliner-group-army.md
docs/performance_notes/: colonizable_planet_habitability.md  fleet_manager.md  outliner-fleets.md  planet_view_high_pops.md  selected_fleets_lag.md  species_modification_alerts.md
include/: hooking_asm.h  hooking_error.h  hooking_shared.h  hooking_windows.h  hooking_windows_platform.h  logging.h  stellar-injected.h  stellaris-CGameApplication.h  stellaris-CGameIdler.h  stellaris-generic.h
include/dll/: address_helper.h  assembly_patches.h  ceffect.h  cevent.h  ceventscope.h  ceveryinlisteffect.h  common.h  conactiondatabase.h  crandominlisteffect.h  cship.h  ctoken.h  ctrigger.h  dllmain.h  hooking_common.h  limit_once_in_x_seconds.h  lua.h
include/hooking/: asm.h  error.h  shared.h  windows.h
include/stellaris/: CApplication.h  CGameApplication.h  CGameIdler.h  generic.h
include/util/: logging.h
src/: hooking_asm.cpp  hooking_error.cpp  hooking_shared.cpp  hooking_windows.cpp  logging.cpp  stellar-injected.cpp  stellar-win.cpp
src/dll/: address_helper.cpp  assembly_patches.cpp  ceffect.cpp  cevent.cpp  ceventscope.cpp  ceveryinlisteffect.cpp  conactiondatabase.cpp  crandominlisteffect.cpp  cship.cpp  ctoken.cpp  ctrigger.cpp  dllmain.cpp  hooking_common.cpp  limit_once_in_x_seconds.cpp  lua.cpp
src/hooking/: asm.cpp  error.cpp  shared.cpp  windows.cpp
src/loader/: main.cpp
src/util/: logging.cpp
